--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav class="side-bar" id="side-bar-div">
         <div id="side-logo-div">
@@ -138,7 +139,7 @@
             </div>
             <div class="edit-task-div button-group">
                 <button type="button" class="editBtns" id="save-task-changes-btn">Save Changes</button>
-                <button type="button" class="editBtns" id="cancel-edit-btn">Cancel</button>
+                <button type="button" class="editBtns" id="`">Cancel</button>
                 <button type="button" class="editBtns" id="delete-task-btn">Delete Task</button>
             </div>
         </form>
