--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="edit-task-div button-group">
                 <button type="button" class="editBtns" id="save-task-changes-btn">Save Changes</button>
-                <button type="button" class="editBtns" id="`">Cancel</button>
+                <button type="button" class="editBtns" id="cancel-edit-btn">Cancel</button>
                 <button type="button" class="editBtns" id="delete-task-btn">Delete Task</button>
             </div>
         </form>
@@ -149,7 +149,7 @@
     <div id="filterDiv"></div>
 
     <!-- JavaScript Import -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
